services/spark/spark-worker-2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker-2
  namespace: spark-updated
spec:
  replicas: 1
  selector:
    matchLabels:
      role: spark-worker-2
  template:
    metadata:
      labels:
        role: spark-worker-2
    spec:
      containers:
      - name: spark-worker
        image: chaitanya0095/spark:custom
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
