services/spark/spark-worker-1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spark-worker-1
  namespace: spark-updated
spec:
  ports:
  - name: workerui
    port: 80
    targetPort: 8081
  selector:
    role: spark-worker-1
  type: ClusterIP
